# StarTracker

./: .gitignore  .gitmodules  README.md
doc/: concept.md
scripts/: Setup.py
src/StarTracker/: .gitignore  CMakeLists.txt  StarTracker.sln
src/StarTracker/StarAPI/: StarAPI.vcxproj  StarAPI.vcxproj.filters
src/StarTracker/StarAPI/StarAPI/: Date.cpp  Date.hpp  DateTime.cpp  DateTime.hpp  Math.cpp  Math.hpp  StarAPI.hpp
src/StarTracker/StarAPI/StarAPI/coordinates/: Horizontal.cpp  Horizontal.hpp  Rectangular.cpp  Rectangular.hpp  Spherical.cpp  Spherical.hpp  Terrestial.hpp  Terrestrial.cpp  Terrestrial.hpp  Transform.cpp  Transform.hpp
src/StarTracker/StarAPI/StarAPI/ephemeris/: CelestialBody.cpp  CelestialBody.hpp  FixedBody.hpp  KeplarianElements.cpp  KeplarianElements.hpp  KeplerianElements.cpp  KeplerianElements.hpp  SolarSystemBody.cpp  SolarSystemBody.hpp
src/StarTracker/StarEngine/: DateTime.cpp  DateTime.hpp  Math.cpp  Math.hpp  StarEngine.hpp
src/StarTracker/StarEngine/Ephemeris/: CelestialBody.cpp  CelestialBody.hpp  FixedBody.cpp  FixedBody.hpp  KeplerianElements.hpp  SolarSystemBody.cpp  SolarSystemBody.hpp
src/StarTracker/StarEngine/Ephemeris/Coordinates/: Horizontal.hpp  Rectangular.cpp  Rectangular.hpp  Spherical.cpp  Spherical.hpp  Terrestrial.cpp  Terrestrial.hpp  Transform.cpp  Transform.hpp
src/StarTracker/StarTracker/: AstronomicalView.cpp  AstronomicalView.hpp  Event.hpp  ExperimentalView.cpp  ExperimentalView.hpp  ImageProcessingView.cpp  ImageProcessingView.hpp  ModelView.cpp  ModelView.hpp  StarTracker.vcxproj  StarTracker.vcxproj.filters  StarTrackerApplication.cpp  StarTrackerApplication.hpp  StarTrackerMain.cpp  StarTrackerView.cpp  StarTrackerView.hpp  TrackableBodyView.cpp  TrackableBodyView.hpp  imgui.ini
src/StarTracker/StarTracker/Assets/Ephemeris/: CelestialBodies.json  imgui.ini
src/StarTracker/StarTracker/Assets/Shaders/: copyTextureVertex.glsl  defaultFragment.glsl  defaultVertex.glsl  kernelFragment.glsl  kernelVertex.glsl  modelFragment.glsl  modelTextureFragment.glsl  modelTextureVertex.glsl  modelVertex.glsl  textureFragment.glsl  textureStackFragment.glsl  textureStackVertex.glsl  textureVertex.glsl
src/StarTracker/StarTracker/Assets/Textures/: imgui.ini
src/StarTracker/StarTracker/Core/: Allocator.cpp  Allocator.hpp  Application.cpp  Application.hpp  Assert.hpp  AssetDataBase.cpp  AssetDataBase.hpp  BodyLibrary.cpp  BodyLibrary.hpp  CelestialBodyLibrary.cpp  CelestialBodyLibrary.hpp  Core.cpp  Core.hpp  ImageProcessing.cpp  ImageProcessing.hpp  Input.cpp  Input.hpp  InputCode.cpp  InputCode.hpp  Logger.cpp  Logger.hpp  Tracker.cpp  Tracker.hpp  UIView.cpp  UIView.hpp  View.cpp  View.hpp  Window.cpp  Window.hpp
src/StarTracker/StarTracker/Core/Events/: Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseClickEvent.cpp  MouseClickEvent.hpp  MouseMoveEvent.cpp  MouseMoveEvent.hpp  MouseScrollEvent.cpp  MouseScrollEvent.hpp  WindowResizeEvent.cpp  WindowResizeEvent.hpp
src/StarTracker/StarTracker/Core/OpenGL/: BufferLayout.cpp  BufferLayout.hpp  Camera.cpp  Camera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/StarTracker/StarTracker/UI/: UI.cpp  UI.hpp
src/StarTracker/StarTracker/Utils/: File.cpp  File.hpp  GeoLocation.cpp  GeoLocation.hpp  HttpRequest.cpp  HttpRequest.hpp  Stopwatch.cpp  Stopwatch.hpp
src/StarTracker/StarTracker/Utils/Serial/: Package.cpp  Package.hpp  Serial.cpp  Serial.hpp
src/StarTracker/StarTracker/assets/: CelestialBodies.json  KeplarianElements.json
src/StarTracker/StarTracker/assets/shaders/: defaultVertex.glsl
src/StarTracker/StarTracker/lib/: glfw3.lib  glfw3_debug.lib
src/StarTracker/StarTracker/src/: ExperimentalView.cpp  ExperimentalView.hpp  StarTrackerApplication.cpp  StarTrackerApplication.hpp  StarTrackerMain.cpp  TrackableBodyView.cpp  TrackableBodyView.hpp  main.cpp
src/StarTracker/StarTracker/src/core/: Application.cpp  Application.hpp  Core.hpp  Input.cpp  Input.hpp  Tracker.cpp  Tracker.hpp  UIView.cpp  UIView.hpp  View.cpp  View.hpp  Window.cpp  Window.hpp
src/StarTracker/StarTracker/src/util/: HTTPRequest.cpp  HTTPRequest.hpp
src/tracker/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  control.cpp  control.hpp  main.cpp  processing.cpp  processing.hpp  tracking.cpp  tracking.hpp  workspace.cpp  workspace.hpp
src/tracker/assets/: settings.json
src/tracker/assets/ephemeris/: planets.json
src/tracker/assets/shaders/: copyTextureFragment.glsl  copyTextureVertex.glsl  kernelFragment.glsl  kernelVertex.glsl  textureStackFragment.glsl
src/tracker/libengine/: CMakeLists.txt  date-time.cpp  date-time.hpp  libengine.hpp  math.cpp  math.hpp
src/tracker/libengine/ephemeris/: catalog.cpp  catalog.hpp  coordinates.cpp  coordinates.hpp  fixed-body.cpp  fixed-body.hpp  planet.cpp  planet.hpp
src/tracker/libtracker/: CMakeLists.txt  bezier.cpp  bezier.hpp  libtracker.hpp  ui.cpp  ui.hpp
src/tracker/libtracker/arch/: file.cpp  file.hpp  http-request.cpp  http-request.hpp  os.hpp  serial.cpp  serial.hpp
src/tracker/libtracker/core/: application.cpp  application.hpp  asset-database.cpp  asset-database.hpp  catalog-manager.cpp  catalog-manager.hpp  core.cpp  core.hpp  events.cpp  events.hpp  geo-location.cpp  geo-location.hpp  image-processing.cpp  image-processing.hpp  input.cpp  input.hpp  location-manager.cpp  location-manager.hpp  package.cpp  package.hpp  settings.cpp  settings.hpp  stopwatch.cpp  stopwatch.hpp  tracker.cpp  tracker.hpp  view.cpp  view.hpp  window.cpp  window.hpp
src/tracker/libtracker/graphics/: buffer.cpp  buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/tracker/tests/: CMakeLists.txt  test-libengine.cpp  test-libtracker.cpp
src/tracker/utility/: CMakeLists.txt  async.cpp  async.hpp  conversion.cpp  conversion.hpp  types.cpp  types.hpp
(+136 files in other folders)
